* Backport r39168 Warning about TracePoint events to 2.0.0   [ruby-core:52073] [Bug #7815]

* vm_trace.c: note about TracePoint events set


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_2_0_0@39237 b2dd03c8-39d4-4d8f-98ff-823fe69b080e